--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "@google-cloud/firestore": "^3.3.2",
     "@hapi/boom": "^9.0.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
